Les boutons ne s'affichent que sur les pages des objets correspondants

--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -4,7 +4,7 @@
     <!-- Détails de l'établissement -->
     <div class="etablissement-header">
         {% set current_page = 'page_etablissement' %}
-        {{ afficher_objet('etablissement', etablissement, current_user, form_etab) }}
+        {{ afficher_objet('etablissement', etablissement, current_user, form_etab, current_page) }}
     </div>
 
     <!-- Grille des flans avec bouton d'ajout -->
