--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,4 +1,7 @@
+
 {% extends "base.html" %}
+
+
 {% block content %}
   <div class="container">
       <h1>Tableau de bord</h1>
@@ -59,14 +62,27 @@
       <!-- Section des évaluations de l'utilisateur -->
       <div class="evaluations-section">
           <h2 class="evaluations-title">Mes evaluations</h2>
-          {{ afficher_grille('evaluation', current_user.evaluations, current_user, eval_form) }}
+          {{ afficher_grille('evaluation', current_user.evaluations, current_user) }}
       </div>
       <!-- Section des évaluations en attente pour les administrateurs -->
       {% if current_user.is_admin %}
       <div class="evaluations-section">
           <h2 class="evaluations-title">Evaluations en attente de validation</h2>
-          {{ afficher_grille('evaluation', pending_evaluations, current_user, eval_form) }}
+          {{ afficher_grille('evaluation', pending_evaluations, current_user) }}
       </div>
+          <div class="evaluations-section">
+          <h2 class="evaluations-title">Flans en attente de validation</h2>
+          {{ afficher_grille('flan', pending_flans, current_user) }}
+      </div>
+                </div>
+          <div class="evaluations-section">
+          <h2 class="evaluations-title">Etablissements en attente de validation</h2>
+          {{ afficher_grille('etablissement', pending_etablissements, current_user) }}
+      </div>
+
+
+
+
       {% endif %}
   </div>
   <script>
